--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,24 +7,24 @@
 
     <fragment
         android:id="@+id/nav_label"
-        android:name="com.zeynepkargi.finall.ui.label.AddLabelFragment"
+        android:name="com.zeynepkargi.finall.ui.AddLabelFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_addlabel" />
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.zeynepkargi.finall.ui.gallery.GalleryFragment"
+        android:name="com.zeynepkargi.finall.ui.GalleryFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_addphoto"
-        android:name="com.zeynepkargi.finall.ui.photo.AddPhotoFragment"
+        android:name="com.zeynepkargi.finall.ui.AddPhotoFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_addphoto" />
     <fragment
         android:id="@+id/nav_logout"
-        android:name="com.zeynepkargi.finall.LogoutFragment"
+        android:name="com.zeynepkargi.finall.ui.LogoutFragment"
         android:label="fragment_logout"
         tools:layout="@layout/fragment_logout" />
     <fragment
